--- a/examples/transaction_window_ethereum.html
+++ b/examples/transaction_window_ethereum.html
@@ -33,6 +33,23 @@
 
 <script>
     const Wallet = GryFyn.default.getProvider('gryfyn_api_demo_local');
+
+    Wallet.on('connect', (evt) => {
+        console.log('connect', evt);
+    });
+
+    Wallet.on('disconnect', (evt) => {
+        console.log('disconnect', evt);
+    });
+
+    Wallet.on('chainChanged', (evt) => {
+        console.log('chainChanged', evt);
+    });
+
+    Wallet.on('accountsChanged', (evt) => {
+        console.log('accountsChanged', evt);
+    });
+
     // This is similar to metamask window.ethereum;
     // const Wallet = window.ethereum;
 
