Add a comprehensive demo

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,5 +1,10 @@
 
-<h2> Simple Transaction example:</h2>
+<h2> GryFyn Web3 Provider Demo:</h2>
+
+<a href="all_functions.html">All Functions</a><BR>
+
+<hr>
+
 <a href="transaction_window_ethereum.html">Example of Wallet.request</a><BR>
 <a href="transaction_etherjs.html">Example of ethers.js</a><BR>
 <a href="transaction_web3js.html">Example of web3.js</a><BR>
