--- a/examples/transaction_etherjs.html
+++ b/examples/transaction_etherjs.html
@@ -77,7 +77,7 @@
   };
 
   async function openGryfyn() {
-    Wallet.openWindow();
+    Wallet.openWallet();
   };
 
   async function getWalletAddress() {
