--- a/examples/transaction_web3js.html
+++ b/examples/transaction_web3js.html
@@ -82,7 +82,7 @@
     };
 
     async function openGryfyn() {
-        Wallet.openWindow();
+        Wallet.openWallet();
     };
 
     async function getWalletAddress() {
