--- a/examples/transaction_window_ethereum.html
+++ b/examples/transaction_window_ethereum.html
@@ -89,7 +89,7 @@
     };
 
     async function openGryfyn() {
-        Wallet.openWindow();
+        Wallet.openWallet();
     };
 
     async function getWalletAddress() {
